# model-mdx

./: .gitignore  Cargo.toml  README.md
docs/: mdx_specs.md
model-mdx/: Cargo.toml
model-mdx/src/: lib.rs
model-mdx/src/encoder/: error.rs  mod.rs
model-mdx/src/parser/: error.rs  mod.rs  primitives.rs
model-mdx/src/types/: animation.rs  attachment.rs  bone.rs  camera.rs  collision.rs  emitter.rs  event.rs  extent.rs  geoset.rs  layer.rs  light.rs  material.rs  materialize.rs  mod.rs  node.rs  sequence.rs  tests.rs  texture.rs  tracks.rs
model-mdx/src/types/chunk/: atch.rs  bone.rs  bpos.rs  cams.rs  clid.rs  corn.rs  evts.rs  fafx.rs  geoa.rs  geos.rs  glbs.rs  help.rs  lite.rs  mdlx.rs  mod.rs  modl.rs  mtls.rs  pivt.rs  pre2.rs  prem.rs  ribb.rs  seqs.rs  snds.rs  texs.rs  txan.rs  utils.rs  vers.rs
model-mdx/src/types/emitter/: mod.rs  model.rs  quad.rs  ribbon.rs
